<resources>
    <string name="app_id">1498720107006077</string>
    <string name="google_map_api_key">AIzaSyBlSVm93hhHpl_tPXEjDoCVAzTREDxwOh8</string>
    <string name="app_name">iGuideU</string>
    <string name="all_day_guide">All Day Guide</string>
    <string name="menu_guide_search">Search Guides</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="nearby">Nearby</string>
    <string name="destination">Destination</string>
    <string name="depature_date">Depature</string>
    <string name="my_guide">My Guide</string>
    <string name="setting">Setting</string>
    <string name="btn_add">Add New Guide</string>
    <string name="create_guide_name">Input the Guide name</string>
    <string name="menu_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_pre">Pre</string>
    <string name="create_guide_available_time">Select your available time</string>
    <string name="error_guide_name_empty">Please type guide name!</string>
    <string name="create_guide_choose_date">Choose a date</string>
    <string name="create_guide_choose_time">Choose available time range</string>
    <string name="from">From:</string>
    <string name="to">To</string>
    <string name="choose_weekday">Choose weekday</string>
    <string name="choose_month_day">Choose day of month</string>
    <string name="av_type_any">Anytime</string>
    <string name="av_type_every_week">Every Week</string>
    <string name="av_type_every_month">Every Month</string>
    <string name="av_type_specific">Specific Datetime</string>
    <string name="av_type_ask_me">Ask Me</string>
    <string name="title_time_from">Start From</string>
    <string name="title_time_to">End when</string>
    <string name="side_menu_my_guide">My Guides</string>
    <string name="side_menu_txt_user_name">i Guide u</string>
    <string name="side_menu_txt_my_join_guide">Join Guide</string>
    <string name="side_menu_setting">Setting</string>
    <string name="init_guide_data_intro">Before you become a guider\n Please fill up some data</string>
    <string name="init_guide_data_btn_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="got_license">Do you have guider license?</string>
    <string name="license_no">License NO.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error_license_no_empty">You must fill up license NO.</string>
    <string name="tip_before_exit_init_guide_data">Give up and exit?</string>
    <string name="choose_language_you_provide">Choose language you could speak</string>
    <string name="lang_zh_tw">Taiwanese</string>
    <string name="lang_us">English</string>
    <string name="lang_jp">Japanese</string>
    <string name="hint_more_lang_available">More language....</string>
    <string name="spinner_choose_more_language">Choose more\.\.\.</string>
    <string name="choose_transpotation_type">Choose transpotation type you offered</string>
    <string name="trans_car">Car</string>
    <string name="trnas_moto">Motorcycle</string>
    <string name="trans_bike">Bike</string>
    <string name="trans_bus">Bus</string>
    <string name="trans_taxi">Taxi</string>
    <string name="trans_train">Train</string>
    <string name="trans_plane">AirPlane</string>
    <string name="trans_boat">Boat</string>
    <string name="trans_else">Else</string>
    <string name="finish_guide_data">Congratulations! \n\n You\'ve finished guider infomations. \n\n\nThat\'s Guide!</string>
    <string name="finish">Finish</string>
    <string name="tip_update_guide_data_seccess">Update success</string>
    <string name="tip_update_guide_data_failed">Oops!!\n\nWe\'ve got something wrong.\n\nPlease try again later.</string>
    <string name="error_init_guide_data_at_least_choose_one_language">You must choose one language.</string>
    <string name="error_init_guide_data_at_least_choose_one_trans_type">You must choose one transpotation type.</string>
    <string name="location">Location</string>
    <string name="guide_name">Guide Name</string>
    <string name="free">Free</string>
    <string name="date">Date:</string>
    <string name="fee">Fee:</string>
    <string name="partial_guide_info_people">People:</string>
    <string name="partial_guide_info_desc">(Max)</string>
    <string name="transportation">Transportation:</string>
    <string name="language">Language:</string>
    <string name="create_guide_max_people">Max Guests</string>
    <string name="tip_create_guide_max_people_empty">Max people empty!</string>
    <string name="tip_create_guide_schedule_empty">You must to type some intro or schedule!</string>
    <string name="tip_create_guide_at_least_one_photo">You must choose at least one photo!</string>
    <string name="tip_create_guide_location_name_empty">You must type location name!</string>
    <string name="tip_create_guide_location_choose_yet">You must select location on maps!</string>
    <string name="tip_create_guide_charge_fee_empty">You must type charge fee!</string>
    <string name="tip_create_guide_date_unselect">You must choose one date!</string>
    <string name="tip_init_guide_profile_realname_empty">You must type real name!</string>
    <string name="tip_init_guide_profile_phone_empty">You must provide phone number!</string>
    <string name="tip_init_guide_intro_empty">You must write sometihing about yourself.</string>
    <string name="tip_no_connection">No available connection now!</string>
    <string name="tip_updating_guider_profile">Updating your data\.\.\.</string>
    <string name="tip_rating_guide_done">Rating Guide Success!</string>
    <string name="tip_rating_guide_failed">Oops!! Rating Guide Failed. Please try again later</string>
    <string name="hint_sample_schedule">1. We\'ll gather at meet loaction on 9:00\n2. Arrive waterfall on 10:00 \n3. Free activiry\n4. Lunch time\n5. Back</string>
    <string name="add_aganda">Please add schedule</string>
    <string name="add_photo">Please add photos</string>
    <string name="ok">OK</string>
    <string name="action_search">Search Location</string>
    <string name="search_hint">Search Location</string>
    <string name="meet_location">Please mark the meet location</string>
    <string name="location_name">LocationName:</string>
    <string name="search_location">Address or location name</string>
    <string name="is_charge_guide">What kind of your guide?</string>
    <string name="chrage_fee">Charge Fee</string>
    <string name="doller_sign">$</string>
    <string name="title_wait">Please wait\.\.\.</string>
    <string name="progress_creating_guide">Creating your guide</string>
    <string name="tip_create_guide_success">Your guide created!</string>
    <string name="tip_create_guide_failed">Oops! we\'ve got something wrong,\nTry again later please.</string>
    <string name="popular">Popular Guides</string>
    <string name="progress_refresh_guide">Refresh\.\.\.</string>
    <string name="init_guide_contact_info">Provide contact info to your customer.</string>
    <string name="male">Mr.</string>
    <string name="female">Miss.</string>
    <string name="hint_real_name">Realname</string>
    <string name="phone_number_use_policy">Only your customer\nable to see your phone number</string>
    <string name="logout">Logout</string>
    <string name="tip_logout_confirm">Logout iGuideU?</string>
    <string name="welcome_to_iguideu">iGuideU</string>
    <string name="nice_guider">Nice Guiders</string>
    <string name="transportation_we_offer">Offer:</string>
    <string name="join_this_guide">Join this!</string>
    <string name="schedule">Schedule</string>
    <string name="traveler">Traveler</string>
    <string name="guider">Guider</string>
    <string name="operation">Operation</string>
    <string name="dilaog_msg_photo_source">What kind do you want?</string>
    <string name="btn_take_photo">Camera</string>
    <string name="btn_from_gallery">Gallery</string>
    <string name="side_menu_waiting_rating">Rate Guide</string>
    <string name="init_traveler_data_info">Before you start your journey,\nPlease fill some data to your guider.</string>
    <string name="error_cant_get_fb_user_info">Something wrong!Please check your network availability.</string>
    <string name="duration">Duration</string>
    <string name="guide_info_detail_info">Info.</string>
    <string name="guide_detail_head_location">Location</string>
    <string name="meet_location_map">Meet you here</string>
    <string name="action_bat_title_popular">Popular</string>
    <string name="action_bat_title_nearby">Nearby</string>
    <string name="action_bat_title_nice_guider">Nice Guider</string>
    <string name="action_bat_title_join_guide">Join Guide</string>
    <string name="action_bat_title_waiting_rating">Rating</string>
    <string name="action_bat_title_my_guides">My Guides</string>
    <string name="action_bat_title_setting">Setting</string>
    <string name="action_bat_title_profile">Profile</string>
    <string name="init_guie_intro_hint">Hi~Write down some introduction of yourslef</string>
    <string name="text_more">\.\.\.more</string>
    <string name="create_guide_duration">Guide Duration</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="minutes">Min</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_phone_number_optional">Optional Phone Number</string>
    <string name="init_treveler_realname">Provide Name Or NickName\nTo Your Guider</string>
    <string name="init_treveler_label_phone">Only Guider Can See Your Number</string>
    <string name="unit_km">KM</string>
    <string name="hint_guide_session_start">StartTime</string>
    <string name="hint_guide_session_end">EndTime</string>
    <string name="create_guide_guide_type">Which type of guide?</string>
    <string name="create_guide_guide_type_all_day">All day</string>
    <string name="create_guide_type_session">By Session</string>
    <string name="create_guide_btn_add_session">Add Session</string>
    <string name="label_all_day_guide">All Day Guide</string>
    <string name="label_guide_by_session">By Session</string>
    <string name="label_how_many_guide_session">%s Sessions/Day</string>
    <string name="join_guide_how_many_guest">How many people will attend?</string>
    <string name="dialog_title_choose_guide_session">Choose one session please</string>
    <string name="title_join_guide_choose_date">Which date you want join?</string>
    <string name="title_join_guide">Join Guide</string>
    <string name="title_rating_guide">Rating Guide</string>
    <string name="title_rating_traveler">Rating Your Guest</string>
    <string name="tip_must_choose_guide_session">You must choose one session to join</string>
    <string name="message_join_all_day_guide_confirm">You are going to\n\nGuide:%1$s\n\nDate:%2$s\n\nGuest:%3$d\n\n\nCorrect?</string>
    <string name="message_join_session_guide_confirm">You are going to\n\nGuide:%1$s\n\nDate:%2$s\n\nSession:%3$s\n\nGuest:%4$d\n\n\nCorrect?</string>
    <string name="message_add_reminder_to_calendar">Join Success!!\n\nWould you like to add reminder into calendar?</string>
    <string name="title_calendar_event">iGuideU\-\-</string>
    <string name="content_calendar_event">The guide host %1$s will meet you at %2$s, have nice trip^^</string>
    <string name="side_menu_traveler_upcoming">Upcoming</string>
    <string name="btn_activate_phone">Activate</string>
    <string name="title_activate_phone_step2">You will recieve a SMS message in next few minuts,\nPlease enter the activate code.</string>
    <string name="label_phone_activate_code">Activate Code</string>
</resources>