<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/create_guide_step6_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/create_guide_fee" />

    <TextView
        android:id="@+id/create_guide_step6_txt_is_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_guide_step6_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/is_charge_guide"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/create_guide_step6_radio_group_is_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_guide_step6_txt_is_charge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" >

        <RadioButton
            android:id="@+id/create_guide_step6_radio_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/free" />

        <RadioButton
            android:id="@+id/create_guide_step6_radio_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chrage_fee" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/create_guide_step6_layout_charge_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_guide_step6_radio_group_is_charge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >

        <EditText
            android:id="@+id/create_guide_step6_edit_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_toRightOf="@+id/create_guide_step6_txt_input_fee"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="7"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/create_guide_step6_txt_input_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/create_guide_step6_edit_fee"
            android:layout_alignParentTop="false"
            android:layout_alignTop="@id/create_guide_step6_edit_fee"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/doller_sign"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <Button
        android:id="@+id/create_guide_data_btn_finish"
        style="@style/base_button_text"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_guide_step6_layout_charge_info"
        android:layout_centerHorizontal="true"
        android:background="@drawable/base_button"
        android:text="@string/finish" />

</RelativeLayout>
