<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/activity_init_traveler_data_welcome_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/init_traveler_data_btn_continue"
                style="@style/base_button_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/base_button"
                android:text="@string/init_guide_data_btn_continue" />

            <Button
                android:id="@+id/init_traveler_data_btn_cancel"
                style="@style/base_button_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/base_button"
                android:text="@string/cancel" />
        </LinearLayout>

        <ImageView
            android:id="@+id/init_traveler_data_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:src="@drawable/init_traveler_welcome" />

        <TextView
            android:id="@+id/init_traveler_data_txt_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/init_traveler_data_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/init_traveler_data_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>
